--- a/.github/workflows/build_erfan.yml
+++ b/.github/workflows/build_erfan.yml
@@ -3,9 +3,9 @@ name: Building GSI..
 on: [push]
 
 env:
-  ROM_URL: https://android.googleapis.com/packages/ota-api/package/9776e65996d77f1e54876b90c66fac6da68e4a63.zip
-  ROM_NAME: Generic
-  ZIP_NAME: Vos3_aris_pro_leeminh
+  ROM_URL: http://bigota.d.miui.com/21.2.3/miui_GRUS_21.2.3_60342cd1f2_11.0.zip
+  ROM_NAME: MIUI
+  ZIP_NAME: MI9SE
   TZ: Asia/Kolkata
 jobs:
   build:
